src/scss/themes/ng/body.scss
/* ... */
.cui-button-select {
	.cui-button-visual {
		padding: 0 4px 0 8px;
	}

	.cui-button-center {
		padding-right: 6px;

		[data-max-chars] {
			text-align: inherit;
		}

		&:empty {
			display: flex;

			&:after {
				content: " ";
			}
		}
	}
}

.cui-button-left,
.cui-button-center,
.cui-button-right {
	display: flex;
	flex: 0 0 auto;
	justify-content: center;
	padding: 0 3px;

	&:empty {
		display: none;
	}
}

.cui-button-center {
	flex-shrink: 1;
	min-width: 0;

	span {
		@include ellipsis;
	}
}

.cui-button-size-mini {
	font-size: 12px;
  height: 26px;

  &.cui-button-appearance-flat {
  	height: auto;
  }

  .cui-button-visual {
  	height: 20px;
  	padding: 0 $padding/4;
  }

  .fa {
  	font-size: 11px;
  }

  .cui-icon-svg {
  	transform: scale(0.75);

  	&.svg-close {
  		transform: none;
  		width: 9px;
  		height: 9px;
  	}
  }
}

.cui-button-size-big {
	font-size: 11px;
	height: 60px;

	&.cui-button-appearance-flat {
		height: auto;
	}

	.cui-buttonbar-group & {
		&:not(:first-child) {
			margin-left: 1px;
		}
	}

	.cui-button-visual {
		line-height: 18px;
		height: auto;
		flex-direction: column;
		border-width: 0;
		padding: $padding/2 $padding/2 0;
	}

	.cui-button-left {
		padding: 3px;
	}

	.fa {
		font-size: 21px;
	}
}

.cui-button-size-bigger {
	font-size: 18px;
	height: 43px;

	&.cui-button-appearance-flat {
		height: auto;
	}
}

a[role="button"].cui-button-appearance-link {
	height: initial;
	> .cui-button-center {
		word-break: break-all;
	}
}

.cui-button-appearance-link[role] {
	display: inline-flex;
	width: auto !important;

	&,
	&:active {
		.cui-button-visual {
			@include button-reset;
			color: $highlight-color;
			line-height: 18px;
		}
	}

	&:focus {
		.cui-button-visual {
			text-decoration: underline;
		}
	}

	.cui-button-center {
		padding: 0;

		span {
			white-space: normal;
		}
	}
}


// Checkbox
.cui-checkbox {
	min-width: 0;
	display: inline-block;

	&.cui-data-field-disabled {
		opacity: 1;
	}

	&--icon {
		.cui-button-checkbox {
			.cui-button-left i {
				border: none;
				background: none;
				font-size: 14px;
				opacity: 0.2;
			}

			&.cui-active {
				.cui-button-left i {
					background: none;
					color: inherit;
					text-shadow: none;
					opacity: 1;
				}
			}
		}
	}

	&--multiline {
		.cui-button-checkbox {
			white-space: initial;

			.cui-button-center {
				span {
					white-space: normal;
				}
			}
		}
	}
}

.cui-button-checkbox {
	display: inline-flex; // so that the click area is not wider than the text
	flex-direction: row;
	cursor: pointer;
	line-height: 18px;
	align-self: flex-start;
	max-width: 100%;
	padding: 3px 0;
	vertical-align: bottom; // fix height change on windows when checked

	[data-max-chars] {
		text-align: inherit;
	}

	&.cui-disabled {
		color: $disabled-color;
		opacity: 1;
		pointer-events: none;

		.cui-button-left {
			opacity: 0.27;
		}
	}

	&:focus {
		outline: none;

		.cui-button-left span,
		.cui-button-left i {
			@include border-focus;
		}
	}

	&.cui-active {
		.cui-button-left i {
			position: relative;
			background: hsl(240,2%,61%);
			border-color: hsl(240,3%,58%);
			color: white;
			text-shadow: 0 1px rgba(0,0,0,.2);
		}

		&[role="radio"] {
			.cui-button-left i {
				color: transparent;
				text-shadow: none;

				// use radial gradient instead of border-radius
				// for a nice round form (otherwise its more of an egg)
				border-radius: none;
				border-color: transparent;
				background: radial-gradient(hsl(240,2%,61%), hsl(240,3%,58%));

				&:after { // radio dot
					content: "";
					position: absolute;
					left: 50%;
					top: 50%;
					width: 6px;
					height: 6px;
					margin: -3px 0 0 -3px;
					border-radius: 100%;
					background: white;
					box-shadow: 0 1px rgba(0,0,0,.2);
				}
			}
		}
	}

	.cui-button-visual {
		justify-content: flex-start;
		flex: 1 0 auto;
		align-items: flex-start;
	}

	.cui-button-left {
		padding: 3px 2px 0 0;
		// empty checkbox: span
		// filled checkbox: i
		span,
		i {
			display: inline-block;
			width: 12px;
			height: 12px;
			border: 1px solid hsl(0,0%,72%);
			border-top-color: hsl(0,0%,65%);
			border-bottom-color: hsl(0,0%,72%);
			background: white;
			font-size: 11px;
			line-height: 11px;
			border-radius: 2px;
			box-shadow: 0 1px rgba(0,0,0,.05) inset;
		}
	}

	.cui-button-center {
		min-width: 0;
		flex: 1 1 auto;
		padding-right: 5px;
		justify-content: flex-start;
	}

	&[role="radio"] {
		.cui-button-left {
			padding-top: 2px;
			padding-right: 4px;

			span,
			i {
				width: 14px;
				height: 14px;
				border-radius: 100%;
			}
		}
	}
}

// Panel
.cui-panel {
	border-top: 1px solid $layer-header-border;
	border-bottom: 1px solid $layer-header-border;

	& + &,
	&:first-child {
		border-top: none;
	}

	&:last-child {
		border-bottom: none;
	}

	&-closed {
		> .cui-panel-body {
			display: none;
		}
	}
}

.cui-panel-header {
	background: $toolbar-background;
	position: relative;
	flex-shrink: 0;
	box-sizing: content-box;

	.cui-button {
		width: 100%;
		height: 100%;
		align-items: stretch;

		.cui-button-visual {
			@include button-reset;
			line-height: 22px;
			justify-content: flex-start;
			padding: 6px $padding;
			color: $button-color;
		}

		&:active {
			.cui-button-visual {
				background: darken($zebra-color, 5%);
				color: $button-color;
			}
		}

		.cui-button-left {
			width: 22px;
			padding-top: 1px;
		}

		.cui-button-center {
			span {
				white-space: normal;
			}
		}

		.fa-angle-right {
			padding-left: 3px;
		}

		.fa-angle-right {
			margin-top: -1px;
		}
	}
}
/* ... */

